--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 30
     defaultConfig {
-        applicationId "uk.lgl.modmenu"
+        applicationId "com.tfive.modmenu"
         minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
