--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,14 +3,14 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 30
     defaultConfig {
-        applicationId "com.tfive.modmenu"
+        applicationId "com.tfive"
         minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
-        versionName "2.2"
+        versionName "2.8"
         ndk {
             abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86'
-            }
+        }
         signingConfig signingConfigs.debug
     }
     buildTypes {
@@ -31,7 +31,9 @@ android {
         }
     }
     ndkVersion = '22.0.7026061'
-    dependencies {
-        implementation fileTree(dir: 'libs', include: ['*.jar'])
-    }
+}
+
+//dependencies must be placed below 'android' brackets to get it work on AIDE
+dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
