--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-  
 # Built application files
 *.apk
 *.aar
@@ -50,7 +49,7 @@ captures/
 .idea/modules.xml
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
 .idea/navEditor.xml
-
+.idea/*
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
 #*.jks
@@ -87,8 +86,3 @@ lint/tmp/
 
 # Android Profiling
 *.hprof
-.idea/compiler.xml
-.idea/jarRepositories.xml
-.idea/misc.xml
-.idea/.gitignore
-.idea/runConfigurations.xml
